--- a/src/scss/partials/_content.scss
+++ b/src/scss/partials/_content.scss
@@ -60,7 +60,7 @@
                 font-size:1em;
             }
         }
-        .card-content h1{
+        .card-content h1, .card-content h2{
             padding:0 0 20px 0px;
             font-size:2em;
             min-height:80px;
@@ -68,10 +68,14 @@
             color:$base-black;
             margin:0 0 0px 0;
         }
+        .card-content h3{
+            padding:0 0 20px 0px;
+        }
         a.btn{
             margin:0px;
+            background:$base-orange;
             &:hover{
-                background:$base-orange-dark;
+                background:$base-orange;
             }
         }
         p{
@@ -84,6 +88,37 @@
         border:solid 1px $base-grey-light;
         @include border-radius(2px);
         @include box-shadow(0 3px 1px -2px rgba(151,150,151,0.9));
+        
+        .card-action{
+            min-height:69px;
+        }
+        
+        &.orange{
+            h1, h2, h3{
+                color:$base-white;
+            }
+            i{
+                color:$base-white;
+                &.inverse{
+                    color:$base-orange;
+                    background:$base-white;
+                }
+            }
+            .card-action{
+                background:$base-white;
+                .btn{
+                    background:$base-white;
+                    color:$base-orange;
+                    &:hover{
+                        background:$base-white;
+                    }
+                }
+            }
+            p{
+                color:$base-white;
+                font-weight:$regular;
+            }
+        }
         
         &.col-3{
             width:316px;
@@ -164,7 +199,9 @@
            padding:20px 250px; 
         }
         h2{
-           padding:0px 200px 30px;  
+            padding:0px 200px 30px;  
+            font-family:$header2-font, $header2-font-family;
+            font-weight:$header2-font-weight;
         }
         h3{
             color:$base-orange;
