--- a/src/scss/partials/_content_start.scss
+++ b/src/scss/partials/_content_start.scss
@@ -31,6 +31,10 @@ body {
 //            background-color:rgba(243, 126, 7, 0.5);
             background-color:rgba(0, 0, 0, 0.3);
         }
+        h2{
+            font-family:$header2-font, $header2-font-family;
+	        font-weight:$header2-font-weight;
+        }
         .indicators {
             z-index: 90;
             li {
