landingpage style merged

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "partials/content";
 @import "partials/content_default";
 @import "partials/content_start";
+@import "partials/content_landingpage";
 @import "partials/footer";
 @import "partials/nav";
 
