--- a/src/scss/partials/_content_landingpage.scss
+++ b/src/scss/partials/_content_landingpage.scss
@@ -1,5 +1,23 @@
 /* content landingpage Styles */
 
-.landingpage{
-
+.landingpage {
+    em {
+        font-style: italic;
+    }
+    .article-intro {
+        padding: 60px 20%;
+    }
+    .article-intro h2 {
+        font-weight: 700;
+        padding-top: 0;
+        padding-bottom: 0;
+        margin: 0;
+        color: #fff;
+        font-size: 1.5em;
+    }
+    h3 {
+        color: #5C4F3D;
+        font-weight: 400;
+        font-size: 1.2em;
+    }
 }
