--- a/src/scss/partials/_content_default.scss
+++ b/src/scss/partials/_content_default.scss
@@ -534,6 +534,7 @@
         vertical-align: top;
     }
     ul.pagination.single-scroll{
+
         position:fixed;
         background:transparent;
         top:50%;
@@ -542,6 +543,7 @@
         li{
             display:block;
             background:transparent;
+
         }
         a{
             background:$base-white;
@@ -549,11 +551,58 @@
             padding-left:15px;
             margin-left:-5px;
             color:$base-grey-medium-dark;
-//            @include border-radius(2px);
+
             &.active{
                 background:$base-orange;
                 color:$base-white;
             }
+        }
+    }
+    ul.pagination-dotted.single-scroll{
+
+        position:fixed;
+        background:transparent;
+        top:50%;
+        background:transparent;
+
+        a{
+
+            height: 10px;
+            border: solid 5px transparent;
+            margin: 12px 0;
+            background:transparent;
+            overflow: unset;
+
+            &.waves-effect .waves-ripple{
+                background:transparent;
+                border:solid 0px transparent;
+            }
+
+            &.active{
+                border-left: solid 5px $base-orange-medium;
+                border-top: solid 5px transparent;
+                border-right: solid 0px transparent;
+                border-bottom: solid 5px transparent;
+                div{
+                    background:$base-orange;
+                }
+            }
+        }
+
+        div {
+            position: relative;
+            top: -9px; 
+            margin-left: 15px;
+            width: 16px;
+            height: 16px;
+            border-radius: 100px;
+            background: $base-grey-medium-dark;
+            color: transparent;
+            font-size: 0.3em;
+            line-height: 0.3em;
+            padding: 0px;
+            border: 2px solid $base-white;
+            box-sizing: content-box;
         }
     }
     .collapsible.content-disclosures{
@@ -563,13 +612,27 @@
             padding: 10px 20px;
         }
         .collapsible-body{
-            padding: 10px 25px;
+            padding: 10px 25px 10px 69px;
             text-align:left;
             a{
                 display:block;
+                padding-left: 0px;
             }
             &:hover{
                 background:$base-grey-light-super;
+            }
+            i.inverse{
+                margin-left: -35px;
+                padding: 2px 5px;
+                border-radius: 100px;
+                color: #fff;
+                background: #ec952c;
+                position: relative;
+                left: -13px;
+                width: 30px;
+                height: 30px;
+                display: inline-block;
+                text-align: center;
             }
         }
     }
@@ -610,10 +673,16 @@
             h1 {
                 font-size: 2.9em;
             }
+            h2 {
+                font-size: 2.0em !important;
+            }
         }
         .column {
             h1 {
                 font-size: 1.2em;
+            }
+            h2 {
+                font-size: 1.2em ;
             }
         }
         .store-activity, .store-address{
@@ -699,11 +768,12 @@
                     min-height: auto;
                 }
             }
-            &.col-3, &.col-3-medium, &.col-3-long, &.col-2, &.col-2-medium, &.col-2-long{
-                min-height:auto;
-                height:auto;
+            &.col-3, &.col-3-medium, &.col-3-long, &.col-2, &.col-2-medium, &.col-2-long {
+                .card-content{
+                    min-height:auto !important;
+                }
                 width:calc(100% - 40px);
-            } 
+            }
 
         }
         .slider{
@@ -720,9 +790,15 @@
             h1 {
                 font-size: 2.9em;
             }
+            h2 {
+                font-size: 2.0em ;
+            }
         }
         .column {
             h1 {
+                font-size: 1.2em;
+            }
+            h2 {
                 font-size: 1.2em;
             }
         }
@@ -809,9 +885,10 @@
                     min-height: auto;
                 }
             }
-            &.col-3, &.col-3-medium, &.col-3-long, &.col-2, &.col-2-medium, &.col-2-long{
-                min-height:auto;
-                height:auto;
+            &.col-3, &.col-3-medium, &.col-3-long, &.col-2, &.col-2-medium, &.col-2-long {
+                .card-content{
+                    min-height:auto !important;
+                }
                 width:calc(100% - 40px);
             }
         }
@@ -839,6 +916,9 @@
             margin-bottom: 2px;
             h1 {
                 font-size: 2.1em;
+            }
+            h2 {
+                font-size: 1.5em !important;
             }
         }
         .offer{
@@ -870,9 +950,7 @@
                 .card-image{
                     min-height:auto;
                 }
-                .card-content{
-                    min-height:auto;
-                }
+
                 width:calc(100% - 40px);
                 box-sizing: border-box;
                 margin: 10px 20px;
@@ -880,17 +958,6 @@
                     min-height:auto;
                 }
         
-                .short-mid{
-                    min-height:400px;
-                }
-
-                .mid-long{
-                    min-height:520px;
-                }
-
-                .long{
-                    min-height:620;
-                }
             }
         }
         .store-activity, .store-address{
@@ -945,6 +1012,9 @@
             h1 {
                 font-size: 2.1em;
             }
+            h2 {
+                font-size: 1.5em !important;
+            }
         }
         .offer{
             h1, h2{
@@ -978,24 +1048,10 @@
                 .card-image{
                     min-height:auto;
                 }
-                .card-content{
-                    min-height:auto;
-                }
                 .short, .short-mid, .mid-long, .long{
                     min-height:auto;
                 }
         
-                .short-mid{
-                    min-height:400px;
-                }
-
-                .mid-long{
-                    min-height:520px;
-                }
-
-                .long{
-                    min-height:620px;
-                }
             }
         }
         .store-activity, .store-address{
