--- a/src/scss/partials/_content_start.scss
+++ b/src/scss/partials/_content_start.scss
@@ -50,7 +50,7 @@ body {
     .store-list {
         text-align: center;
         background-color:$base-grey-light;
-        h1 {
+        h1, h2 {
             color: $base-grey-medium;
             font-size: 4em;
             line-height: 1.1em;
@@ -70,7 +70,7 @@ body {
             .centered {
                 width: 100%;
             }
-            h1 {
+            h1, h2 {
                 color: $base-black;
                 margin-top: 0px;
                 padding: 20px 15px;
@@ -99,7 +99,7 @@ body {
     }
     .benefits {
         background-color:$base-grey-light;
-        h1 {
+        h1, h2 {
             color: $base-grey-medium-dark;
             font-size: 3em;
             line-height: 1.1em;
@@ -144,7 +144,7 @@ body {
             }
         }
         .benefits {
-            h1{
+            h1, h2{
                font-size: 2em; 
                 margin-bottom: 40px;
             }
@@ -159,7 +159,7 @@ body {
             }
         }
         .offer{
-            h1, h2{
+            h1, h2, h3{
                 padding:20px 40px;
             }
             div{
@@ -167,7 +167,7 @@ body {
             }
         }
         .store-list {
-            h1 {
+            h1, h2 {
                 font-size: 2em;
                 line-height: 1.0em;
                 margin-bottom: 50px;
@@ -188,7 +188,7 @@ body {
             }
         }
         .benefits {
-            h1{
+            h1, h2{
                font-size: 2em; 
                 margin-bottom: 40px;
             }
@@ -203,7 +203,7 @@ body {
             }
         }
         .offer{
-            h1, h2{
+            h1, h2, h3{
                 padding:20px 40px;
             }
             div{
@@ -211,7 +211,7 @@ body {
             }
         }
         .store-list {
-            h1 {
+            h1, h2 {
                 font-size: 2em;
                 line-height: 1.0em;
                 margin-bottom: 50px;
